# lorem-invaders

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md  vcpkg-configuration.json  vcpkg.json
lib/includes/: reasing.h
resources/: ibm-16.fnt  lorem.txt  words.txt
src/: CMakeLists.txt  arraylist.c  arraylist.h  audio.cc  audio.h  colors.h  enemy.cc  enemy.h  enemy_pool.cc  enemy_pool.h  entity.c  entity.cc  entity.h  event.h  event_bus.cc  event_bus.h  event_dispatcher.cc  event_dispatcher.h  event_listener.cc  event_listener.h  fx_base.cc  fx_base.h  fx_flash.cc  fx_flash.h  fx_shake.cc  fx_shake.h  inputbox.c  inputbox.cc  inputbox.h  lipsum.cc  lipsum.h  main.c  main.cc  message_bus.cc  message_bus.h  messages.h  player.cc  player.h  resources.c  resources.cc  (+23 more)
